--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,6 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-    name: Build
-    uses: azazeal/workflows/.github/workflows/golib.yml@v1.0.2
+  call-build:
+    name: Call Build Package
+    uses: azazeal/workflows/.github/workflows/gopkg.yml@master
